@@ -69,6 +69,9 @@ graph_line_colour = #C0C0C0FF
 # Colour of warning texts
 warning_colour = #FF4E4EFF
 
+# Colour of 'X' buttons
+x_colour = #FF4E4EFF
+
 # Relative from the .cfg file path to your more image, recommended 20x20
 more_image = ./default_data/more_dark.png
 
